2007.02.22: David Nichols
	* implemented new extensible DBI-driver registration

2007.02.20: David Nichols
	* updated HTTPClient to support redirections, basic authentication and
	  proxies (proxy support untested)
	* fixed a bug in QoreSocket when reading all available data
	* fixed HTTPClient proxy communication

2007.02.17: David Nichols
	* added begin_transaction function to DBI drivers to support databases
	  requiring explicit "BEGIN"s for transaction management
	* updated release number to 0.6.2
	* updated module API to 0.3 due to DBI change - need to implement 
	  forward-compatible DBI driver mechanism

*** v0.6.1 RELEASE ***

2007.02.12: David Nichols
	* enlarged buffer for host ip address lookups to 1024 bytes
	* fixed a bug setting the port number by protocol name in the 
	  HTTPClient class

2007.02.11: David Nichols
	* fixed a bug parsing escape sequences in JSON strings
	* implemented unicode numeric character code parsing in JSON strings 
	* updated documentation

2007.02.10: David Nichols
	* ensure that decompressed strings are null terminated and the length is
	  set properly and not calculated in case they contain binary data after
	  all

2007.02.09: David Nichols
	* fixed bugs in compressing/decomressing data larger than the default
	  buffer size
	* added "deflate" and "gzip" content-handling to the HTTPClient class

2007.02.08: David Nichols
	* added documentation for min() and max()
	* corrected some documentation typos
	* modified hextoint() to accept optionally leading '0x' or 'x' in front
	  of the string of hex digits
	* modified XML parsing to treat CDATA specially: put it in ^cdata^ hash
	  keys and do not do any escape processing on it so it can be recognized
	  as CDATA, also makeXMLString() will create CDATA entries properly for
	  such hash keys, this data can be processed for escape code conversion
	  using the html_decode() function
	* updated library to -version 2:0:1 (libqore 1.1.0)

2007.02.07: David Nichols